<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/nav_header_main" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/nav_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:focusableInTouchMode="true"
            android:layout_marginStart="5dp">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingTop="@dimen/dimen_10"
            android:paddingBottom="5dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/master_planner"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/planner" />

            <TextView
                android:id="@+id/nav_master_planner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="@string/planner"
                android:textSize="14sp"
                android:layout_marginStart="15dp" />

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingTop="@dimen/dimen_10"
            android:paddingBottom="5dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                app:srcCompat="@drawable/navigation"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/planner" />

            <TextView
                android:id="@+id/nav_location_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="@string/location_reminder"
                android:textSize="14sp"
                android:layout_marginStart="15dp" />

        </LinearLayout>

        <!--<LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                app:srcCompat="@drawable/earth_location"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/planner" />

            <TextView
                android:id="@+id/nav_location_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="Location Reminder"
                android:textSize="14sp"
                android:layout_marginStart="15dp" />
        </LinearLayout>-->



        <LinearLayout
            android:id="@+id/nav_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                app:srcCompat="@drawable/filter_countdown"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/planner" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="Countdown"
                android:textSize="14sp"
                android:layout_marginStart="15dp" />
        </LinearLayout>







        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="@dimen/dimen_10"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                app:srcCompat="@drawable/ic_palette_black_24dp"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/planner" />

            <TextView
                android:id="@+id/nav_drawings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="Drawings"
                android:textSize="14sp"
                android:layout_marginStart="15dp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                app:srcCompat="@drawable/arrow_up_bold_hexagon_outline"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/upgrade_account" />

            <TextView
                android:id="@+id/nav_upgrade_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="Backup And Restore"
                android:textSize="14sp"
                android:layout_marginStart="15dp" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#c9c9e2" />


        <!--<LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                app:srcCompat="@drawable/palette_advanced"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/ads" />

            <TextView
                android:id="@+id/nav_remove_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="@string/removes_ads"
                android:textSize="14sp"
                android:layout_marginStart="15dp" />
        </LinearLayout>-->


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                app:srcCompat="@drawable/settings"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/settings" />

            <TextView
                android:id="@+id/nav_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="@string/settings"
                android:textSize="14sp"
                android:layout_marginStart="15dp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                app:srcCompat="@drawable/apps"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/apps" />

            <TextView
                android:id="@+id/nav_more_of_our_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="@string/more_of_our_apps"
                android:textSize="14sp"
                android:layout_marginStart="15dp" />
        </LinearLayout>

        // Feedback/Help
        <LinearLayout
            android:id="@+id/nav_feedback_or_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                app:srcCompat="@drawable/help_circle_outline"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/help" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="@string/feedback_help"
                android:textSize="14sp"
                android:layout_marginStart="15dp" />
        </LinearLayout>

        // Rate Master planner
        <LinearLayout
            android:id="@+id/nav_rate_master_planner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                app:srcCompat="@drawable/star"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/help" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="@string/rate_master_planner"
                android:textSize="14sp"
                android:layout_marginStart="15dp" />
        </LinearLayout>

        // Share this app
        <LinearLayout
            android:id="@+id/nav_share_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                app:srcCompat="@drawable/share_variant"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/help" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="@string/share_this_app"
                android:textSize="14sp"
                android:layout_marginStart="15dp" />
        </LinearLayout>


        //About us
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                app:srcCompat="@drawable/account_group"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/help" />

            <TextView
                android:id="@+id/nav_about_as"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="About Us"
                android:textSize="14sp"
                android:layout_marginStart="15dp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>